--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Trabajo Práctico Bootstrap</title>
-    <link rel="stylesheet" href="/assets/css/bootstrap.css"/>
+    <link rel="stylesheet" href="assets/css/bootstrap.css"/>
 </head>
 
 <body>
@@ -106,7 +106,7 @@
 
 
 
-    <script src="/assets/js/bootstrap.js"></script>
+    <script src="assets/js/bootstrap.js"></script>
 </body>
 
 </html>
